--- a/angular_app/src/app/header/header.component.scss
+++ b/angular_app/src/app/header/header.component.scss
@@ -1,23 +1,27 @@
 .navbar {
     display: flex;
-    justify-content: flex-start; /* 右揃えにする */
-    background-color: #333333; // 暗いグレーの背景色
-    color: white; // 文字色を白に
+    justify-content: flex-start;
+    background-color: #333333;
+    color: white;
+    height: 30px;
 }
 
 .navbar-text {
     display: flex;
     align-items: center; /* 縦方向の中央揃えにする */
     gap: 10px; /* 要素同士の間隔をとる */
+    justify-content: flex-start;
 }
 
-.navbar-text h2 {
-    margin: 0; /* h2タグの余白を取り除く */
+.item {
+    display: flex;
+    margin: 2px;
+    align-items: center;
 }
-// header.component.scss
-a:visited {
+
+.icon {
+    display: flex;
+    align-items: center;
+    margin: 2px;
     color: white;
 }
-
-
-
