--- a/angular_app/src/app/app.component.html
+++ b/angular_app/src/app/app.component.html
@@ -1,9 +1,12 @@
-<a routerLink=""
-  ><h1>{{ title }}</h1></a
+<span class="zerosense"
+  ><h1 (click)="switchRoute()" class="superbig">{{ title }}</h1></span
 >
 <app-header></app-header>
-<div class="container gamename">
-  <span (click)="moveGameMain(game)" class="superbig">{{ game.gamename }}</span>
+<div *ngIf="currentGame.id !== '' && currentGame.id" class="container">
+  <div class="gamespan">
+    <span (click)="moveGameMain(currentGame)" class="gamename">{{ currentGame.gamename }}</span>
+    <span class="date"> {{ currentGame.start }} ~ {{ currentGame.end }} </span>
+  </div>
 </div>
 
 <router-outlet></router-outlet>
