--- a/angular_app/src/app/exitgame/exitgame.component.html
+++ b/angular_app/src/app/exitgame/exitgame.component.html
@@ -1,6 +1,6 @@
-<h2>アカウントの削除</h2>
+<h2>大会の退出</h2>
 <div>パスワードを入力してください</div>
-<form (submit)="deleteAccount()">
+<form (submit)="exitGame()">
   <input type="password" [(ngModel)]="password" placeholder="password" name="password" />
-  <button type="submit">削除</button>
+  <button type="submit">退出</button>
 </form>
