--- a/angular_app/src/app/gamemain/gamemain.component.html
+++ b/angular_app/src/app/gamemain/gamemain.component.html
@@ -54,13 +54,15 @@
               <div *ngIf="showTime; then show; else noshow"></div>
               <ng-template #show>
                 <span class="show no"
-                  >的中回数詳細<span class="icon"
+                  ><span class="text">的中回数詳細</span
+                  ><span class="icon"
                     ><i class="fa fa-chevron-circle-down" aria-hidden="true"></i> </span
                 ></span>
               </ng-template>
               <ng-template #noshow>
                 <span class="show yes"
-                  >的中回数詳細<span class="icon"
+                  ><span class="text">的中回数詳細</span
+                  ><span class="icon"
                     ><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </span
                 ></span>
               </ng-template>
@@ -99,12 +101,13 @@
       </table>
     </ng-template>
     <ng-template #roading>
-      <div>読み込み中</div>
-      <mat-progress-spinner
-        class="spinner"
-        mode="indeterminate"
-        color="accent"
-      ></mat-progress-spinner
+      <span class="loading">
+        <div>読み込み中</div>
+        <mat-progress-spinner
+          class="spinner"
+          mode="indeterminate"
+          color="accent"
+        ></mat-progress-spinner></span
     ></ng-template>
   </div>
 </div>
@@ -127,11 +130,11 @@
           <div *ngIf="race.voted; then votedBlock; else noVoted"></div>
           <ng-template #votedBlock>
             <span class="icon"> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </span
-            ><span class="isvoted small">更新する</span>
+            ><span class="isvoted small">更新</span>
           </ng-template>
           <ng-template #noVoted>
             <span class="icon"> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </span
-            ><span class="novoted small">投票する</span>
+            ><span class="novoted small">投票</span>
           </ng-template></span
         >
       </div>
@@ -141,8 +144,18 @@
 </div>
 
 <div class="pastrace container">
+  <div class="title">過去のレース結果</div>
   <a (click)="moveResult()">
-    <div class="title">過去のレース結果</div>
+    <div class="flex-box">
+      <span class="icon"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </span>
+      <span class="here">こちらから</span>
+    </div></a
+  >
+</div>
+
+<div class="exit container">
+  <span class="title">大会から退出する</span>
+  <a (click)="moveExitGame()">
     <div class="flex-box">
       <span class="icon"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </span>
       <span class="here">こちらから</span>
