--- a/angular_app/src/app/home/home.component.html
+++ b/angular_app/src/app/home/home.component.html
@@ -6,8 +6,8 @@
     <div *ngIf="gameNumber; then game; else noGame"></div>
     <ng-template #game>
       <span *ngFor="let game of games"
-        ><span class="flex-box"
-          ><div class="item game" (click)="moveGameMain(game)">
+        ><span class="game"
+          ><div class="item gamename" (click)="moveGameMain(game)">
             <span class="icon"> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></span>
             <span class="name">{{ game.gamename }}</span>
           </div>
@@ -19,6 +19,7 @@
     </ng-template>
     <ng-template #noGame>
       参加中の大会がありません
+
       <a routerLink="/joingame">大会に参加する</a>
     </ng-template>
   </ng-template>
