--- a/angular_app/src/app/home/home.component.scss
+++ b/angular_app/src/app/home/home.component.scss
@@ -1,8 +1,8 @@
-.flex-box {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
+// .flex-box {
+//     display: flex;
+//     align-items: center;
+//     justify-content: space-between;
+// }
 
 .item {
     display: flex;
@@ -22,7 +22,7 @@
         }
     }
 
-    &.game {
+    &.gamename {
         display: flex;
         align-items: center;
 
@@ -44,5 +44,20 @@
             align-items: center;
             font-size: medium;
         }
+    }
+}
+
+$canclickblue: #0066aa;
+
+.game {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 10px;
+    margin: 7px;
+    height: 50px;
+    .here {
+        color: $canclickblue;
+        font-weight: 700;
     }
 }
