--- a/angular_app/src/app/pastraces/pastraces.component.html
+++ b/angular_app/src/app/pastraces/pastraces.component.html
@@ -10,7 +10,7 @@
     <ng-template #displayBlock>
       <div class="date">{{ race.date }}</div> </ng-template
     ><ng-template #nodisplay></ng-template>
-    <div class="flex-box">
+    <div class="flex-box vote{{ race.vote_num }}">
       <div class="race-item">
         <span class="icon"> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></span
         ><span class="racename vote{{ race.vote_num }}">{{ race.name }}</span>
