--- a/angular_app/src/app/sign-up/sign-up.component.html
+++ b/angular_app/src/app/sign-up/sign-up.component.html
@@ -1,22 +1,86 @@
-<div class="page">
-    <section class="card">
-        <form class="inputEmail" (ngSubmit)="submitSignUp($event)" #signUpForm="ngForm">
-            <h2>新規登録</h2>
-            <label for="inputUsername" class="sr-only"> Username</label>
-            <input type="text" id="inputUsername" name="username" class="form-control"
-            placeholder="Username" [(ngModel)]="account.username" #username="ngModel" required autofocus>
-            <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" name="email" id="inputEmail" class="form-control" 
-            placeholder="Email address" [(ngModel)]="account.email" #email="ngModel" autocomplete="username email" required >
-            <label for="inputPassword" class="sr-only">Password</label>
-            <!-- パスワードは6文字以上 -->
-            <input type="password" name="password" id="inputPassword" class="form-control"
-            placeholder="Password" [(ngModel)]="account.password" #password="ngModel" autocomplete="new-password" required >
-            <label for="confirmationPassword" class="sr-only">Re-enter Password</label>
-            <input type="password" name="password_confirmation" id="confirmationPassword" class="form-control" 
-            placeholder="Re-enter Password" [(ngModel)]="account.passwordConfirmation" #password_confirmation="ngModel" autocomplete="new-password" required>
-            <button type="submit" [disabled]="!signUpForm.form.valid">SIGN UP</button>
-        </form>
-        <a routerLink="/account/login">ログインはこちら</a>
-    </section>
+<div class="container">
+  <span class="title">新規登録</span>
+  <section class="card">
+    <form class="inputdata" (ngSubmit)="submitSignUp($event)" #signUpForm="ngForm">
+      <span class="username item">
+        <span class="left"> ユーザー名</span>
+        <span class="textbox">
+          <label for="inputUsername" class="sr-only"> Username</label>
+          <input
+            type="text"
+            id="inputUsername"
+            name="username"
+            class="form-control"
+            placeholder="Username"
+            [(ngModel)]="account.username"
+            #username="ngModel"
+            required
+            autofocus
+        /></span>
+      </span>
+
+      <span class="address item">
+        <span class="left"> メールアドレス</span>
+        <span class="textbox"
+          ><label for="inputEmail" class="sr-only">Email address</label>
+          <input
+            type="email"
+            name="email"
+            id="inputEmail"
+            class="form-control"
+            placeholder="Email address"
+            [(ngModel)]="account.email"
+            #email="ngModel"
+            autocomplete="username email"
+            required
+        /></span>
+      </span>
+
+      <span class="password item">
+        <span class="left">
+          パスワード
+          <span>(6文字以上)</span></span
+        >
+        <span class="textbox"
+          ><label for="inputPassword" class="sr-only">Password</label>
+          <!-- パスワードは6文字以上 -->
+          <input
+            type="password"
+            name="password"
+            id="inputPassword"
+            class="form-control"
+            placeholder="Password"
+            [(ngModel)]="account.password"
+            #password="ngModel"
+            autocomplete="new-password"
+            required
+        /></span>
+      </span>
+
+      <span class="confirm item">
+        <span class="left"> パスワード<span>確認</span> </span>
+        <span class="textbox">
+          <label for="confirmationPassword" class="sr-only">Re-enter Password</label>
+          <input
+            type="password"
+            name="password_confirmation"
+            id="confirmationPassword"
+            class="form-control"
+            placeholder="Re-enter Password"
+            [(ngModel)]="account.passwordConfirmation"
+            #password_confirmation="ngModel"
+            autocomplete="new-password"
+            required
+        /></span>
+      </span>
+
+      <button type="submit" [disabled]="!signUpForm.form.valid">SIGN UP</button>
+    </form>
+  </section>
+</div>
+<div class="container">
+  <div class="box">
+    <span class="icon"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </span
+    ><span routerLink="/account/login"> ログイン </span>
+  </div>
 </div>
