--- a/angular_app/src/app/updatename/updatename.component.html
+++ b/angular_app/src/app/updatename/updatename.component.html
@@ -16,9 +16,9 @@
     >
   </span>
 </div>
-<div class="goback container">
+<!-- <div class="goback container">
   <div class="flex-box" (click)="goBack()">
     <span class="icon"> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></span
     ><span class="text">大会へ戻る</span>
   </div>
-</div>
+</div> -->
