--- a/angular_app/src/app/pastraces/pastraces.component.scss
+++ b/angular_app/src/app/pastraces/pastraces.component.scss
@@ -87,3 +87,10 @@ $date: #1b521f;
     color: white;
     width: 100%;
 }
+
+.goback {
+    .text {
+        color: $canclickblue;
+        font-weight: 700;
+    }
+}
