--- a/angular_app/src/app/raceresult/raceresult.component.scss
+++ b/angular_app/src/app/raceresult/raceresult.component.scss
@@ -197,3 +197,10 @@ $date: #1b521f;
         padding: 10px 0px;
     }
 }
+
+.goback {
+    .text {
+        color: $canclickblue;
+        font-weight: 700;
+    }
+}
