--- a/angular_app/src/app/deleteaccount/deleteaccount.component.html
+++ b/angular_app/src/app/deleteaccount/deleteaccount.component.html
@@ -1,6 +1,20 @@
-<h2>アカウントの削除</h2>
-<div>パスワードを入力してください</div>
-<form (submit)="deleteAccount()">
-  <input type="password" [(ngModel)]="password" placeholder="password" name="password" />
-  <button type="submit">削除</button>
-</form>
+<div class="container">
+  <span class="title">アカウントの削除</span>
+  <form (ngSubmit)="deleteAccount()" class="forms">
+    <span class="serch-box">
+      <label for="name" class="left">パスワード</label>
+      <span class="text-box">
+        <input
+          class="text"
+          type="text"
+          name="password"
+          id="password"
+          [(ngModel)]="password"
+          placeholder="password"
+          required
+        />
+      </span>
+    </span>
+    <button type="submit">削除</button>
+  </form>
+</div>
