--- a/angular_app/src/app/home/home.component.scss
+++ b/angular_app/src/app/home/home.component.scss
@@ -4,6 +4,17 @@
 //     justify-content: space-between;
 // }
 
+$green: #268300;
+$grade: #00695c;
+$cellline: #ddd;
+$header: #37474f;
+$tablehover: #f0f0f0;
+$containerline: #1fac37;
+$slash: #797979cd;
+$canclickblue: #0066aa;
+$icon: #188542;
+$date: #1b521f;
+
 .item {
     display: flex;
     background-color: white;
@@ -59,5 +70,34 @@ $canclickblue: #0066aa;
     .here {
         color: $canclickblue;
         font-weight: 700;
+    }
+}
+
+.noGame.flex-box {
+    box-shadow: 0px 0px rgba(248, 244, 244, 0.1);
+    justify-content: center;
+    color: black;
+}
+
+.flex-box {
+    &.joingame {
+        .icon {
+            display: flex;
+            margin: 5px;
+        }
+        .text {
+            color: $canclickblue;
+            font-weight: 700;
+        }
+    }
+    &.newgame {
+        .icon {
+            display: flex;
+            margin: 5px;
+        }
+        .text {
+            color: red;
+            font-weight: 700;
+        }
     }
 }
