--- a/angular_app/src/app/pastraces/pastraces.component.html
+++ b/angular_app/src/app/pastraces/pastraces.component.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 </div>
-<div class="container">
+<div class="goback container">
   <div class="flex-box" (click)="goBack()">
     <span class="icon"> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </span
     ><span class="text">戻る</span>
