--- a/app1/templates/home.html
+++ b/app1/templates/home.html
@@ -16,4 +16,14 @@
     </button>
   </form>
 </div>
+{%endblock %} {% block get-finishvote-button %}
+<div style="padding: 20px">
+  <!-- Adjust top property accordingly -->
+  <form action="finishvote" method="POST">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-primary">
+      対象のレースの投票を締め切る
+    </button>
+  </form>
+</div>
 {%endblock %}
