画面更新の修正

--- a/angular_app_sourse/src/app/app.component.html
+++ b/angular_app_sourse/src/app/app.component.html
@@ -1,5 +1,7 @@
 <span class="zerosense"
-  ><h1 (click)="switchRoute()" class="superbig">{{ title }}</h1></span
+  ><h1 (click)="switchRoute()" class="superbig">
+    <span>{{ title }}</span>
+  </h1></span
 >
 <app-header></app-header>
 <div *ngIf="currentGame.id !== '' && currentGame.id" class="container">
