--- a/angular_app_sourse/src/app/deleteaccount/deleteaccount.component.scss
+++ b/angular_app_sourse/src/app/deleteaccount/deleteaccount.component.scss
@@ -35,6 +35,7 @@
 }
 
 button {
+    display: flex;
     width: 60px;
     background-color: red;
     color: #ffffff;
@@ -45,6 +46,7 @@ button {
         background-color: red;
     }
     margin: 0px 10px 5px 10px;
+    justify-content: center;
 }
 
 .game {
