--- a/angular_app_sourse/src/app/pastraces/pastraces.component.scss
+++ b/angular_app_sourse/src/app/pastraces/pastraces.component.scss
@@ -31,11 +31,13 @@ $date: #1b521f;
 .grade {
     background-color: $grade;
     color: white;
-    padding: 5px 5px 4px 5px;
+    padding: 5px 0px 4px 0px;
+    width: 50px;
     margin: 10px;
     border-radius: 5px;
-    font-size: small;
+    font-size: 14px;
     letter-spacing: -2px;
+    text-align: center;
 }
 
 .container.racelist {
@@ -51,29 +53,27 @@ $date: #1b521f;
         //     box-shadow: 0px 0px rgba(0, 0, 0, 0.1);
         // }
     }
-    .racename {
-        color: $canclickblue;
-        font-weight: 700;
-        display: inline-block;
-        width: 200px;
-        font-size: 3vw; // ビューポートの幅に応じて文字サイズを調整
-        white-space: nowrap;
-        // &.vote0 {
-        //     color: rgba(0, 0, 0, 0.696);
-        // }
-    }
+    .race-item {
+        display: flex;
+        align-items: center;
+        .racename {
+            color: $canclickblue;
+            font-weight: 700;
+            display: inline-block;
+            width: 200px;
+            font-size: 12px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            flex-grow: 1;
+        }
 
-    .icon {
-        color: $icon;
-        display: inline-block;
-        width: 15px;
-        margin-left: 5px;
-    }
-
-    button {
-        display: inline-block;
-        width: 70px;
-        margin-right: 10px;
+        .icon {
+            color: $icon;
+            display: flex;
+            width: 15px;
+            margin-left: 5px;
+        }
     }
 
     .votetime {
