--- a/angular_app_sourse/src/app/vote/vote.component.scss
+++ b/angular_app_sourse/src/app/vote/vote.component.scss
@@ -128,31 +128,30 @@ h2 {
   }
 }
 
-.grade {
-  background-color: $grade;
-  color: white;
-  padding: 5px 5px 4px 5px;
-  margin: 10px;
-  border-radius: 5px;
-  font-size: small;
-  letter-spacing: -2px;
-}
-
-.racename {
-  display: inline-block;
-  font-weight: 700;
-  padding: 5px 10px 5px 5px;
-  margin: 0px;
-}
-
-.big {
-  font-size: 5vw; // ビューポートの幅に応じて文字サイズを調整
-  white-space: nowrap;
-}
 .center-text {
   text-align: center;
-  display: block; // この行を追加して、spanをブロック要素として表示
+  display: flex; // この行を追加して、spanをブロック要素として表示
   align-items: center;
+  justify-content: center;
+  .grade {
+    background-color: $grade;
+    color: white;
+    padding: 5px 5px 4px 5px;
+    margin: 10px;
+    border-radius: 5px;
+    font-size: small;
+    letter-spacing: -2px;
+  }
+
+  .racename {
+    display: flex;
+    font-weight: 700;
+    padding: 5px 10px 5px 5px;
+    margin: 0px;
+    font-size: 18px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .table {
