--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,4 +1,4 @@
-<span class="ZEROSENSE"
+<span class="zerosense"
   ><h1 (click)="switchRoute()" class="superbig">
     <span>{{ title }}</span>
   </h1></span
