--- a/angular/src/app/raceresult/raceresult.component.scss
+++ b/angular/src/app/raceresult/raceresult.component.scss
@@ -20,8 +20,7 @@ $date: #1b521f;
 }
 
 .big {
-    font-size: 5vw; // ビューポートの幅に応じて文字サイズを調整
-    white-space: nowrap;
+    font-size: 18px;
 }
 
 .racename {
